--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,3 @@
-recursive-include itdctools/templates *.html
-recursive-include itdctools/static *.css
-recursive-include itdctools/static *.js
+recursive-include webui/templates *.html
+recursive-include webui/static *.css
+recursive-include webui/static *.js
