uwsgi conf change

--- a/uwsgi/uwsgi.ini
+++ b/uwsgi/uwsgi.ini
@@ -1,7 +1,7 @@
 [uwsgi]
-virtualenv = /usr/share/webui
-chdir = /srv/
-module = webui.uwsgi:app
+virtualenv = /webui
+chdir = /webui
+module = uwsgi:app
 plugins = python
 chmod-socket = 660
 socket = /tmp/uwsgi.sock
