--- a/uwsgi/uwsgi.ini
+++ b/uwsgi/uwsgi.ini
@@ -1,7 +1,6 @@
 [uwsgi]
-virtualenv = /webui
-chdir = /webui
-module = uwsgi:app
+virtualenv = /home/alx9110/GitHub/docker-web-ui/venv
+module = webui.uwsgi:app
 plugins = python
 chmod-socket = 660
 socket = /tmp/uwsgi.sock
