--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,4 @@
 recursive-include webui/templates *.html
 recursive-include webui/static *.css
 recursive-include webui/static *.js
+recursive-include webui/static/images *.png
